# -RWAAgentonSpoonOS

./: .env.example  .gitignore  DESCRIPTION_TRANSLATIONS_REPORT.md  DEV_TO_BLOG_POST.md  Dockerfile  Dockerfile.gui  FEATURE_NAMES_ENGLISH.md  FINAL_S_LEVEL_SUBMISSION.md  GUI_CHINESE_DESCRIPTIONS.md  GUI_DEPLOYMENT_GUIDE.md  GUI_DESIGN_UPDATE_REPORT.md  GUI_ENHANCED_FIX_REPORT.md  GUI_FEATURE_DESCRIPTIONS.md  GUI_MEDIA_FILE_FIX_REPORT.md  GUI_QUICK_START.md  HTML_RENDERING_FIX_REPORT.md  I18N_COMPLETE_FIX_REPORT.md  I18N_FINAL_FIX_REPORT.md  I18N_IMPLEMENTATION_REPORT.md  I18N_INTEGRATION_GUIDE.md  I18N_MISSING_TRANSLATIONS_FIX_REPORT.md  I18N_STARTUP_FIX_REPORT.md  I18N_SYSTEM_STATUS_FIX_REPORT.md  KIRO_PROJECT_SUBMISSION.md  KIRO_SUBMISSION_CHECKLIST.md  LICENSE  PLAYWRIGHT_TRANSLATION_VERIFICATION_REPORT.md  PROJECT_STATUS.md  PROJECT_STRUCTURE_GUI.md  QUICK_START.md  README.md  RWA_AGENT_SUCCESS_REPORT.md  VIDEO_RECORDING_CHECKLIST.md  VIDEO_SCRIPT_CHINESE.md  VIDEO_SCRIPT_DETAILED.md  VIDEO_SCRIPT_SHORT.md  YOUTUBE_UPLOAD_CONTENT.md  complete_s_level_demo.py  config.json  core.md  (+41 more)
.kiro/steering/: product.md  structure.md  tech.md
api/: __init__.py  rwa_api.py
cli/: commands.py
data/: rwa_optimizer.db
database/: models.py
doc/: agent.md  agent_configuration.md  builtin_tools.md  cli.md  configuration.md  graph_agent.md  installation.md  mcp_mode_usage.md  openrouter.md
examples/: README.md  llm_architecture_example.py  llm_infrastructure_example.py  llm_manager_example.py
examples/agent/: graph_agent_demo.py  my_agent_demo.py
examples/mcp/: README_tavily.md  SpoonThirdWebagent.py  mcp_thirdweb_collection.py  tavily_search_agent.py
locales/: en.json  zh.json
services/: data_service.py
spoon_ai/: chat.py  graph.py  schema.py
spoon_ai/agents/: __init__.py  base.py  custom_agent.py  graph_agent.py  mcp_client_mixin.py  portfolio_optimizer_agent.py  rag.py  react.py  rwa_yield_agent.py  spoon_react.py  spoon_react_mcp.py  toolcall.py
spoon_ai/config/: __init__.py  errors.py  manager.py  mcp_manager.py  models.py  tool_factory.py
spoon_ai/llm/: README.md  __init__.py  base.py  cache.py  config.py  errors.py  factory.py  interface.py  manager.py  monitoring.py  registry.py  response_normalizer.py
spoon_ai/monitoring/: __init__.py  main.py
spoon_ai/prompts/: __init__.py  spoon_react.py  toolcall.py
spoon_ai/retrieval/: __init__.py  base.py  chroma.py  document_loader.py  qdrant.py
spoon_ai/services/: __init__.py  (+1 more)
tests/: asserts.py  github_client.py  test_agent_llm_integration.py  test_chatbot_integration.py  test_example_tools.py  test_graph.py  test_llm_manager_integration.py  test_llm_refactor_integration.py  test_prompt_caching.py  test_rwa_agents.py  test_unified_config_cli.py  test_updated_examples.py
utils/: __init__.py  i18n.py
(+53 files in other folders)
